# pedicab

./: .gitignore  .rustfmt.toml  Cargo.toml  Taskfile.yaml
pedicab/: Cargo.toml
pedicab/src/: main.rs
pedicab_cli/: Cargo.toml
pedicab_cli/src/: lib.rs
pedicab_core/: Cargo.toml
pedicab_core/src/: manager.rs  tcp.rs  udp.rs  utils.rs
pedicab_db/: Cargo.toml
pedicab_db/src/: lib.rs
pedicab_db/src/dal/: rule.rs
pedicab_db/src/data/: generic.rs  rule.rs
pedicab_db/src/model/: rule.rs
pedicab_http/: Cargo.toml
pedicab_http/src/: lib.rs
pedicab_http/src/controller/: embed.rs  fm.rs  metrics.rs  mod.rs  rule.rs
pedicab_http/src/data/: mod.rs
pedicab_http/src/embed/: mod.rs
pedicab_http/src/layer/: bearer.rs  request_id.rs
pedicab_http/src/router/: embed.rs  mod.rs  v1.rs
src/: cli.rs  main.rs
src/database/: mod.rs
src/database/dal/: mod.rs  rule.rs
src/database/data/: mod.rs  rule.rs
src/database/model/: rule.rs
src/forward/: manager.rs  mod.rs  tcp.rs  udp.rs  utils.rs
src/server/: mod.rs
src/server/controller/: embed.rs  fm.rs  metrics.rs  mod.rs  rule.rs
src/server/data/: body.rs  metrics.rs  mod.rs  response.rs
src/server/embed/: mod.rs
src/server/layer/: bearer.rs  mod.rs
src/server/router/: embed.rs  mod.rs  v1.rs
