cargo-features = ["profile-rustflags"]

[profile.release]
opt-level = 3                          # Optimize for size.
lto = true                             # Enable Link Time Optimization
codegen-units = 1                      # Reduce number of codegen units to increase optimizations.
panic = "abort"                        # Abort on panic
strip = true                           # Automatically strip symbols from the binary.
rustflags = ["-Zlocation-detail=none"]
debug = false

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "pedicab",
  "pedicab_cli",
  "pedicab_core",
  "pedicab_db",
  "pedicab_http",
]
default-members = ["pedicab"]

[workspace.dependencies]
# Workspace
pedicab_cli = { path = "pedicab_cli" }
pedicab_core = { path = "pedicab_core" }
pedicab_db = { path = "pedicab_db" }
pedicab_http = { path = "pedicab_http" }

# Async
tokio = { version = "1", features = ["full"] }
tower = { version = "0", features = ["log"] }
futures = { version = "0" }
async-trait = { version = "0.1" }
parking_lot = { version = "0.12", features = [
  "nightly",
  "deadlock_detection",
  "hardware-lock-elision",
] }

# Utils
ahash = { version = "0.8", features = ["serde"] }
rand = { version = "*", features = ["nightly", "serde"] }
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
console = { version = "0" }
nix = { version = "0.30", features = [
  "feature",
  "zerocopy",
  "event",
  "socket",
] }
time = { version = "0", features = [
  "macros",
  "quickcheck",
  "serde-human-readable",
] }

# Serde / Derive
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = { version = "1.0" }
serde_with = { version = "3.14", features = [
  "time_0_3",
  "json",
  "hex",
  "base64",
  "indexmap",
] }
derive_more = { version = "*", features = ["full"] }

# Observability
tracing = { version = "0.1", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "unicode"] }
dotenvy = { version = "0", features = ["cli"] }
