cargo-features = ["profile-rustflags"]

[package]
name = "pedicab_cli"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3                          # Optimize for size.
lto = true                             # Enable Link Time Optimization
codegen-units = 1                      # Reduce number of codegen units to increase optimizations.
panic = "abort"                        # Abort on panic
strip = true                           # Automatically strip symbols from the binary.
rustflags = ["-Zlocation-detail=none"]
debug = false

[dependencies]
# Observability
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
