[package]
name = "pedicab_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace
pedicab_cli = { workspace = true }
pedicab_db = { workspace = true }

# Async
tokio = { workspace = true }
tower = { workspace = true }

# Utils
rand = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ahash = { workspace = true }

# Observability
tracing = { workspace = true }

# System
socket2 = { version = "0.6", features = ["all"] }

# Cache
moka = { version = "0.12", features = ["future", "logging"] }

[target.'cfg(unix)'.dependencies]
rlimit = { version = "0" }
